third_party/move/move-model/tests/sources/inline_fun_spec_err.exp
error: function-level spec blocks are not supported on inline functions with function-typed parameters
  ┌─ tests/sources/inline_fun_spec_err.move:5:29
  │
5 │     public inline fun apply(f: |u64| u64, x: u64): u64 {
  │                             ^
